Changed package description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "feder-atom-highlight",
     "version": "1.2.0",
-    "description": "Support syntax highlight for Feder",
+    "description": "Highlight Feder source code",
     "engines": {
         "atom": "*"
     },
